# gpu-graphs

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.c  pyproject.toml  start-server.sh  test.py
.devcontainer/: devcontainer.json
bindings/python/: pyproject.toml
bindings/python/src/gpu_graphlib/: __init__.py  _ctypes.py  _loader.py  ast_utils.py  ctype_bindings.py  graph_builder.py
data/: sample0.py
docker/: Dockerfile  Dockerfile.1
docker/dummy_keys/: id_rsa  id_rsa.pub
docker/metrics-discovery-api/lib/: libigdmd.so.1
docker/metrics-discovery-api/package/: libigdmd.pc
include/: algorithms.h  graph.h
src/: algorithms.c  graph.c  graph.h  logger.c  logger.h  main.c
