[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-graphlib"
version = "0.1.0"
description = "ctypes bindings for libgpu_graphlib"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "bindings/python/src"}

[tool.setuptools.packages.find]
where = ["bindings/python/src"]

[tool.setuptools.package-data]
gpu_graphlib = [".lib/libgpu_graphlib.so", ".lib/*.so.*"]