[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-graphlib"
version = "0.1.0"
description = "ctypes bindings for libgpu_graphlib"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gpu_graphlib = ["libgpu_graphlib.so"]
